# big-data-processing-lab

./: README.md
doc/: hadoop.md  lab_3.docx
merkle_lab/merkle_test/: Cargo.toml
merkle_lab/merkle_test/src/: config.rs  main.rs
merkle_lab/rust-merkle-tree/: Cargo.toml
merkle_lab/rust-merkle-tree/src/: hash.rs  lib.rs  merkle_tree.rs  node.rs  proof.rs
merkle_lab/rust-merkle-tree/src/tests/: benchmarks.rs  mod.rs
script/: observe_error.sh  observe_hdfs.sh  observe_host.sh  top_record.sh
