[package]
name = "merkle_test"
version = "0.1.0"
authors = ["hustccc <1276675421@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-merkle-tree = { path = "/home/hustccc/big_data_processing_lab/merkle_lab/rust-merkle-tree" }
walkdir = "2.3.1"