[package]
name = "rust-merkle-tree"
version = "0.1.0"
authors = ["hustccc <1276675421@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
clippy = {version = "0.0.131", optional = true}

[lib]
doctest = false

[features]
dev = ["clippy"]